# service-postgres

./: .gitignore  agent.codefly.yaml  bootstrap_template_test.go  builder.go  capability_probe_test.go  composition_test.go  deployment_test.go  go.mod  go.sum  lifecycle_matrix_test.go  main.go  main_test.go  migrations.go  migrations_test.go  nixpg.go  nixpg_auth_test.go  nixpg_pidclean_test.go  nixpg_test.go  pglog.go  pglog_test.go  runtime.go  runtime_access.go  runtime_access_test.go
libs/go/: README.md  open.go  open_test.go  store.go  store_test.go
libs/go/controlplane/: access.go  access_test.go
libs/go/migrationtest/: control_plane.go  inventory.go  inventory_test.go
libs/rust/: Cargo.toml  README.md
libs/rust/src/: lib.rs
nix/: flake.nix
templates/agent/: README.md.tmpl
templates/builder/: Dockerfile.tmpl  runtime-access.sql.tmpl
templates/deployment/kustomize/base/: kustomization.yaml  kustomization.yaml.tmpl  service.yaml.tmpl  stateful-set.yaml.tmpl
templates/factory/configurations/local/: postgres.secret.env
