[package]
name = "codefly-service-postgres"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Authenticated, transaction-scoped Rust client for Codefly Postgres services"
publish = false

[dependencies]
async-trait = "0.1"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1", features = ["time", "rt", "macros"] }
